--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <div class="container-lg pt-5"> 
           <div class="row d-flex justify-content-center text-center pt-5">
             <div class="col-lg-6">
+              <!-- added bounce antimation to H1 class to emphsis the call to action -->
               <h1 class="animate__animated animate__bounce">Healthy, Delicious Meals Delivered to Your Door – Ready in Minutes!</h1>
+             <!-- added Bounce in animation to follow the H1 to catch the attention of the viewer -->
               <p class="animate__bounceIn">With Daily Dish, you can enjoy chef-crafted, wholesome meals without the hassle of meal prep, grocery shopping, or cleanup.</p>
               <a href="" class="btn btn-primary btn-lg">Get Started Today and Save Time!</a>
             </div>
@@ -81,6 +83,7 @@
 
       <section>
         <div class="container-lg text-center">
+          <!-- Added A bounce in to encourage user to see the next section -->
           <h2 class="pb-2 animate__bounceIn">How it Works</h2>
           <p class="col-lg-8 text-center mx-auto">Say goodbye to meal planning stress! With Daily Dish, you’ll enjoy chef-crafted meals made from fresh, natural ingredients, delivered right to your door—ready to cook in minutes.</p>
           <div class="row row-cols-1 row-cols-lg-3 gy-4">
